--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "reset-css": "^5.0.1",
     "sirv-cli": "^1.0.0",
     "svelte-fa": "^2.2.1"
   }
